[Issue 10] Element alignment done.

--- a/WebContent/src/style.css
+++ b/WebContent/src/style.css
@@ -22,4 +22,10 @@ body,div {
 div {
 	position: relative;
 	overflow: hidden;
+	display: inline-block;
+    font-size: 0;
+}
+
+div > * {
+	font-size: 12px;
 }
